@@ -169,6 +169,7 @@ t/166_cancel_import.t
 t/167_import_with_error.t
 t/168_import_multipage_PDF.t
 t/169_import_multipage_PDF2.t
+t/170_import_multipage_TIFF.t
 t/171_save_session.t
 t/172_open_session.t
 t/173_open_crashed_session.t
